Connexion token
Add connexion with token. TODO: Add security middleware
